manifests/wilapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wilapp
  labels:
    app: wilapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wilapp
  template:
    metadata:
      labels:
        app: wilapp
    spec:
      containers:
        - name: wilapp
          image: wil42/playground:v1
          ports:
            - containerPort: 80
