manifests/wilapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wilapp
spec:
  selector:
    app: wilapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
