manifests/wilapp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wilapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wilapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wilapp
                port:
                  number: 80
